Create the batsee output directory if one doesn't exist yet. Also adding the output directory to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ SysbenchDockerfile
 SysbenchDockerfile.dockerignore
 sysbench-runner-tests-entrypoint.sh
 config.json
+integration-tests/bats/batsee_results
